@@ -1,3 +1,10 @@
+2007-06-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/include/yarp/ShmemHybridStream.h: switched
+	"shmem" carrier to be a name for Alessandro's new
+	implementation.  To get the old carrier, use "shmem1".
+	So something like "yarp write /write shmem://read" will
+	connect using the new shmem implementation from today.
 
 2007-05-29  Alessandro Scalzo <ale@liralab.it>
 	* src/libYARP_OS/include/yarp/ShmemHybridStream.h, 
